# yolov8_cpp_opencv

./: CMakeLists.txt  README  README.md  main.cpp
include/: yolov8_det_dfl.h  yolov8_pose_dfl.h  yolov8_seg_dfl.h  yolov8_utils.h
src/: yolov8_det.cpp  yolov8_det_dfl.cpp  yolov8_pose_dfl.cpp  yolov8_seg.cpp  yolov8_seg_dfl.cpp  yolov8_utils.cpp
